<resources>
    <string name="app_name">Cadastro de clientes</string>
    <string name="title_activity_act_main">ActMain</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_act_cad_cliente">ActCadCliente</string>
    <string name="lb_nome">Nome</string>
    <string name="lbl_idade">Idade</string>
    <string name="lbl_telefone">telefone</string>
    <string name="lbl_endereco">Endereco</string>
    <string name="lbl_email">Email</string>
    <string name="title_menu_ok">Ok</string>
    <string name="title_action_cancelar">Cancelar</string>
    <string name="title_aviso">Aviso</string>
    <string name="message_campos_invalidos_brancos">Há campos inválidos ou em branco</string>
    <string name="lbl_ok">OK</string>
    <string name="message_conexao_criada_com_sucesso">\"Conexão criada com sucesso! \"</string>
    <string name="action_ok">OK</string>
    <string name="title_erro">Erro</string>
    <string name="title_action_excluir">Excluir</string>
</resources>